tests/e2e/object_int_index_invalid3.story
a = {-2: true}
a.b = true
